# near-indexer-for-explorer

./: .dockerignore  .editorconfig  .fossa.yml  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.migrations  README.md  TROBLESHOOTING.md  diesel.toml  docker-compose.yml  docker_entrypoint.sh  nft.json  run-in-docker.sh
.buildkite/: pipeline.yml
.github/workflows/: indexer.yml  release.yml  test.yml
circulating-supply/: Cargo.toml  Dockerfile
circulating-supply/src/: account_details.rs  lockup.rs  lockup_types.rs  main.rs
cross/x86_64-unknown-linux-gnu/: Dockerfile
database/: Cargo.toml  Dockerfile  diesel.toml  wait-for-postgres.sh
database/migrations/2021-01-20-152056_index-transactions-receiver-account-id/: down.sql
database/migrations/2021-05-06-093622_additional_indexes_for_action_receipt_actions/: up.sql
database/migrations/2021-08-06-123500_account_changes_ordering_column/: down.sql
database/migrations/2021-10-14-180948_add_resharding_state_change_reason_kind/: up.sql
database/migrations/2022-01-12-100000_assets_ft/: down.sql
database/migrations/2022-01-26-184201_index_action_receipt_actions/: down.sql
database/migrations/2022-06-07-000000_drop_action_receipt_actions_args_amount_index/: down.sql  up.sql
database/migrations/2022-08-12-123800_ft_nft_indexes/: down.sql  up.sql
database/migrations/2022-09-23-100000_index_action_receipt_actions_on_timestamp_and_order_index/: down.sql  up.sql
database/migrations/2023-02-02-100000_fungible_token_events_pk_changed/: down.sql  up.sql
database/migrations/2023-02-02-110000_non_fungible_token_events_pk_changed/: down.sql  up.sql
database/migrations/2023-02-28-160000_meta_tx/: down.sql  up.sql
database/migrations/2023-04-20-160000_deprecated_namespace/: down.sql  up.sql
database/src/: lib.rs  receipts_cache.rs  retryable.rs  schema.patch  schema.rs
database/src/adapters/: access_keys.rs  account_changes.rs  accounts.rs  blocks.rs  chunks.rs  execution_outcomes.rs  genesis.rs  mod.rs  receipts.rs  transactions.rs
database/src/adapters/aggregated/: circulating_supply.rs  mod.rs
database/src/adapters/assets/: event_types.rs  events.rs  fungible_token_events.rs  mod.rs  non_fungible_token_events.rs
database/src/db_adapters/: blocks.rs
database/src/db_adapters/assets/: events.rs  fungible_token_events.rs
database/src/migrations/2021-01-20-152056_index-transactions-receiver-account-id/: up.sql
database/src/migrations/2021-03-11-123839_index-action-kind-and-status/: down.sql
database/src/migrations/2021-05-10-084700_indexer_on_args_field/: down.sql  up.sql
database/src/migrations/2021-05-27-154211_account_changes_unique_idx/: up.sql
database/src/models/: access_keys.rs  account_changes.rs  accounts.rs  blocks.rs  chunks.rs  enums.rs  execution_outcomes.rs  mod.rs  receipts.rs  serializers.rs  transactions.rs
database/src/models/aggregated/: circulating_supply.rs  mod.rs
database/tests/: do_something.rs
database/tests/blocks/: 82699904.json
indexer/: CHANGELOG.md  Cargo.toml  Dockerfile
indexer/migrations/2021-01-14-170424_index-receipt-originated-from-transaction-hash/: down.sql
indexer/migrations/2021-05-06-093622_additional_indexes_for_action_receipt_actions/: down.sql
indexer/src/: configs.rs  main.rs  metrics.rs  retriable.rs
indexer/src/db_adapters/: transactions.rs
indexer/src/db_adapters/assets/: events.rs  mod.rs
indexer/src/models/: account_changes.rs  mod.rs  serializers.rs  transactions.rs
migrations/2020-05-18-095055_create_blocks/: down.sql  up.sql
migrations/2020-05-19-132810_create_chunks/: down.sql  up.sql
migrations/2020-06-09-123237_create_transactions/: down.sql  up.sql
migrations/2020-06-12-085343_create_receipts/: down.sql  up.sql
migrations/2020-06-26-115509_create_receivers/: down.sql  up.sql
migrations/2020-09-17-130740_create_receipts/: down.sql  up.sql
migrations/2020-09-23-075746_create_execution_outcomes/: down.sql  up.sql
migrations/2020-09-23-101219_create_transactions/: down.sql  up.sql
migrations/2020-10-06-111219_create_accounts/: up.sql
migrations/2020-10-14-092520_accounts_created_by_receipt_id_nullable/: down.sql  up.sql
migrations/2020-10-15-093744_receipts-fk-constraints/: down.sql  up.sql
migrations/2020-10-15-114122_create_access_keys/: down.sql  up.sql
migrations/2020-10-26-113101_remove_account_fk_from_access_keys/: down.sql  up.sql
migrations/2020-11-06-103108_data_id_add_index/: down.sql  up.sql
migrations/2020-11-06-104009_chunkd_index/: down.sql  up.sql
migrations/2020-11-06-113536_account_id_suffix/: down.sql  up.sql
migrations/2020-11-09-152330_sanity-naming/: down.sql  up.sql
migrations/2020-11-09-160239_indecies/: down.sql  up.sql
migrations/2020-11-13-150029_last_update_block_height/: down.sql  up.sql
migrations/2020-11-23-180822_receipts-indecies/: down.sql  up.sql
migrations/2020-11-24-154628_create_state_changes/: down.sql  up.sql
migrations/2020-12-07-153402_initial_schema/: down.sql  up.sql
migrations/2021-01-14-170424_index-receipt-originated-from-transaction-hash/: up.sql
migrations/2021-03-11-123839_index-action-kind-and-status/: up.sql
migrations/2021-03-29-183641-readonly_role/: down.sql  up.sql
migrations/2021-04-22-090505_execution_outcomes_replace_chunk_relation_with_shard_id/: down.sql  up.sql
migrations/2021-04-28-154439_denormalize_action_receipt_actions/: down.sql  up.sql
migrations/2021-05-06-093622_additional_indexes_for_action_receipt_actions/: down.sql  up.sql
migrations/2021-05-07-115559_convert_args_base64_to_args_json/: down.sql  up.sql
migrations/2021-05-27-154211_account_changes_unique_idx/: down.sql  up.sql
migrations/2021-06-02-173100_add_migration_state_change_reason_kind/: down.sql  up.sql
migrations/2021-06-09-102523_grant_select_on_new_tables/: down.sql  up.sql
migrations/2021-10-04-100000_assets_nft/: down.sql  up.sql
scripts/: docker-release.sh
src/: configs.rs  main.rs  metrics.rs  receipts_cache.rs  retriable.rs  schema.patch  schema.rs
workflows/: indexer.yml
(+83 files in other folders)
