[package]
name = "circulating-supply"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
anyhow = "1.0.51"
bigdecimal = "=0.1.0"
base64 = "0.11"
chrono = "0.4.19"
dotenv = "0.15.0"
# syn version conflict, replace with crates.io version once released
near-sdk = { git = "https://github.com/near/near-sdk-rs", rev="03487c184d37b0382dd9bd41c57466acad58fc1f" }
tokio = { version = "1.1", features = ["sync", "time"] }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
uint = { version = "0.8.3", default-features = false }

near-indexer-primitives = "0.14"
near-jsonrpc-client = "0.4.0-beta.0"
# Remove manual base64 decoding of lockup state when upgrading to 0.15
# https://github.com/khorolets/near-indexer-for-explorer/blob/master-lake/circulating_supply/src/lockup.rs#L60
near-jsonrpc-primitives = "0.14.0"

explorer-database = { path = '../database' }
