[package]
name = "indexer-explorer"
version = "0.11.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
rust-version = "1.64"

[dependencies]
actix = "0.13.0"
actix-rt = "2.2.0"
actix-web = "=4.0.1"
anyhow = "1.0.51"
aws-types = "0.13.0"
aws-sdk-s3 = "0.13.0"
borsh = "0.7.1"
cached = "0.23.0"
chrono = "0.4.19"
clap = { version = "3.1.6", features = ["color", "derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.5"
itertools = "0.10.3"
lazy_static = "^1.4"
# syn version conflict, replace with crates.io version once released
near-sdk = { git = "https://github.com/near/near-sdk-rs", rev="03487c184d37b0382dd9bd41c57466acad58fc1f" }
openssl-probe = { version = "0.1.2" }
prometheus = "0.13.0"
r2d2 = "0.8.8"
tokio = { version = "1.1", features = ["sync", "time"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
uint = { version = "0.8.3", default-features = false }

near-jsonrpc-client = "0.4.0-beta.0"
near-lake-framework = "0.5.2"

explorer-database = { path = "../database" }

[features]
default = ["account_changes", "fungible_token_events"]
account_changes = []
fungible_token_events = ["explorer-database/fungible_token_events"]
