[package]
name = "indexer-explorer"
version = "0.13.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
rust-version = "1.64"

[dependencies]
actix = "0.13.0"
actix-web = "=4.0.1"
anyhow = "1.0.51"
aws-types = "0.53"
aws-sdk-s3 = "0.23"
aws-config = "0.53"
borsh = "0.7.1"
cached = "0.23.0"
chrono = "0.4.19"
clap = { version = "3.1.6", features = ["color", "derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.5"
indicatif = "0.17.3"
itertools = "0.10.3"
lazy_static = "^1.4"
# syn version conflict, replace with crates.io version once released
near-sdk = { git = "https://github.com/near/near-sdk-rs", rev="03487c184d37b0382dd9bd41c57466acad58fc1f" }
openssl-probe = { version = "0.1.2" }
prometheus = "0.13.0"
reqwest = { version = "0.11.14", features = ["stream"] }
r2d2 = "0.8.8"
tokio = { version = "1.1", features = ["sync", "time"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-stackdriver = "0.7.2" # GCP logs
tracing-subscriber = "0.3.15"
uint = { version = "0.8.3", default-features = false }

near-jsonrpc-client = { workspace = true }
near-lake-framework = "0.7.1"

explorer-database = { path = "../database" }

[features]
default = []
account_changes = []
fungible_token_events = []
